[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "showmark"
dynamic = ["version"]
description = "Serve rendered markup documents"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "showmark@varonathe.org" }
]

keywords = [
    "file viewer",
    "markdown",
    "reStructuredText",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Typing :: Typed",
]

dependencies = [
    "docutils",
    "Flask ~= 3.0",
    "myst-parser[linkify] ~= 3.0",
    "pygments",
]

[project.urls]
"Source Code" = "https://github.com/jwodder/showmark"
"Bug Tracker" = "https://github.com/jwodder/showmark/issues"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.local.scripts]
run = "flask --app 'showmark.app:create_app()' run -p 8080"

[tool.hatch.envs.local.env-vars]
FLASK_SHOWMARK_SEARCH_PATH = "{home}/work"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
